SERVER-25015 Locate the correct shards when using MinKey/MaxKey tags

Also, tighten the assertions and enhance unit-testing.